--- a/transitapp-spa/src/index.css
+++ b/transitapp-spa/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.carousel .item {
+  height: 500px;
+  background-color:#bbb;
+}
+.carousel img {
+  width: 100%;
+  vertical-align: middle;
+}
